# AutoReview

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
tests/: test_app.py
